--- a/bluelotus-travels/src/index.css
+++ b/bluelotus-travels/src/index.css
@@ -8,6 +8,7 @@ body, html {
   -moz-osx-font-smoothing: grayscale;
   background-size:100% 100%;
   background-color:rgb(72, 72, 73) ;
+  overflow-x: hidden;
 }
 
 code {
