--- a/bluelotus-travels/src/index.css
+++ b/bluelotus-travels/src/index.css
@@ -6,9 +6,12 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-size:100% 100%;
+  width: 100%;
+  height: 100%;
   background-color:rgb(72, 72, 73) ;
   overflow-x: hidden;
+  overflow-y: auto;
+  
 }
 
 code {
